// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletionStatus matches snapshot 1`] = `
<div
  className="sc-bczRLJ sc-iBkjds fZGYwW isUsEZ sc-papXJ"
>
  <h2
    className="sc-ftvSup iFRSyk"
  >
    No questions have been answered.
  </h2>
  <p>
    Begin working on the quiz.
  </p>
  <button
    className="sc-gKXOVf fTCarG"
    data-test-id="start-btn"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`CompletionStatus matches snapshot with all questions completed 1`] = `
<div
  className="sc-bczRLJ sc-iBkjds fZGYwW isUsEZ sc-papXJ"
>
  <h2
    className="sc-ftvSup iFRSyk"
  >
    You are done.
  </h2>
  <p>
    Great job answering all the questions.
  </p>
  <button
    className="sc-gKXOVf fTCarG"
    data-test-id="next-btn"
    onClick={[Function]}
  >
    Next
  </button>
</div>
`;

exports[`CompletionStatus matches snapshot with some questions completed 1`] = `
<div
  className="sc-bczRLJ sc-iBkjds fZGYwW isUsEZ sc-papXJ"
>
  <h2
    className="sc-ftvSup iFRSyk"
  >
    Quiz is partially complete.
  </h2>
  <p>
    You've completed 5 of 15 questions.
  </p>
  <button
    className="sc-gKXOVf fTCarG"
    data-test-id="continue-btn"
    onClick={[Function]}
  >
    Continue
  </button>
</div>
`;
